--- a/static/client.html
+++ b/static/client.html
@@ -2,23 +2,48 @@
 <html>
     <head>
         <title>Websocket Echo Test</title>
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/client.css" rel="stylesheet">
     </head>
     <body>
-        <h2>Chat test</h2>
-        <div>
-            <label for="username">Username
-                <input type="text" id="username"/>
-            </label>
-            <button id="connect">Connect</button>
+        <div id="login-container">
+            <div class="flex-padding"></div>
+            <div id="login-wrapper">
+                <div class="flex-padding"></div>
+                <div id="login-form">
+                    <h2>Broadcast Test</h2>
+                    <form>
+                        <div class="form-group">
+                            <label for="username">Username</label>
+                            <input type="text" class="form-control" id="username" placeholder="Enter Username">
+                        </div>
+                        <div class="form-group">
+                            <button id="connect" type="submit" class="btn btn-primary">Connect</button>
+                        </div>
+                        <div class="form-group">
+                            <button disabled id="call-start" class="btn btn-primary">Start Call</button>
+                        </div>
+                    </form>
+                </div>
+                <div class="flex-padding"></div>
+            <div>
+            </div>
+            </div>
+            <div class="flex-padding"></div>
         </div>
-        <div>
-            <button disabled id="call_start">Start Call</button>
+        <div class="remote-video-container">
+            <video id="remote-video" autoplay muted></video>
         </div>
-        <div>
-            <video id="local_video" autoplay muted></video>
-            <video id="remote_video" autoplay muted></video>
+        <div class="local-video-container">
+            <div class="flex-padding"></div>
+            <div class="local-video-wrapper">
+                <div class="flex-padding"></div>
+                <div class="local-overflow-wrapper">
+                    <video id="local-video" autoplay muted></video>
+                </div>
+            </div>
         </div>
-        <div>
+
     </body>
     <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
     <script>
@@ -28,7 +53,7 @@
 
         var username = document.getElementById("username");
         var messageInput = document.getElementById("message");
-        var callButton = document.getElementById("call_start");
+        var callButton = document.getElementById("call-start");
         var messages = document.getElementById("messages");
         var testWS = null;
 
@@ -52,7 +77,7 @@
             testWS.onopen = function (event) {
                 console.log("Hey cool, websocket open");
                 sendMsg("client", {"type": "client_hello"});
-                $("#call_start").attr("disabled", false);
+                $("#call-start").attr("disabled", false);
             };
 
             testWS.onmessage = function (event) {
@@ -63,6 +88,7 @@
                     case "offer":
                         console.log("answering a call");
                         callButton.disabled = true;
+                        $("#login-container").hide();
 
                         createPeerConnection();
 
@@ -71,7 +97,7 @@
 
                         navigator.mediaDevices.getUserMedia({audio: true, video: true})
                         .then(function(localStream) {
-                            document.getElementById("local_video").srcObject = localStream;
+                            document.getElementById("local-video").srcObject = localStream;
                             localStream.getTracks().forEach(track => peerconnection.addTrack(track, localStream));
                             return peerconnection.createAnswer();
                         })
@@ -117,6 +143,7 @@
         });
 
         callButton.onclick = function () {
+            $("#login-container").hide();
             callButton.disabled = true;
             username.disabled = true;
             isCaller = true;
@@ -176,13 +203,13 @@
 
             peerconnection.ontrack = function (event) {
                 console.log("Hey cool a mediastream: ", event);
-                document.getElementById("remote_video").srcObject = event.streams[0];
+                document.getElementById("remote-video").srcObject = event.streams[0];
             }
 
             if (isCaller) {
                 navigator.mediaDevices.getUserMedia({audio: true, video: true})
                 .then(function(localStream) {
-                    document.getElementById("local_video").srcObject = localStream;
+                    document.getElementById("local-video").srcObject = localStream;
                     localStream.getTracks().forEach(track => peerconnection.addTrack(track, localStream));
                     
                     peerconnection.createOffer().then(function(offer) {
