--- a/static/client.html
+++ b/static/client.html
@@ -47,7 +47,9 @@
     </body>
     <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
     <script>
-        var peerconnection = null;
+        var clientPeerconnection = null; // 2-way communication between us and someone else
+        var serverPeerconnection = null; // 1-way communication between us and the "server"
+
         var isCaller = false;
         var datachannel = null;
 
@@ -57,6 +59,7 @@
         var messages = document.getElementById("messages");
         var testWS = null;
 
+        // Send a msg, to either the other client or to the server
         var sendMsg = function (target, msg) {
             msg["username"] = username.value;
             msg["target"] = target;
@@ -72,6 +75,7 @@
                 return;
             }
 
+            $("#username").attr("disabled", true);
             $("#connect").attr("disabled", true);
             testWS = new WebSocket("ws://localhost:5000/echo");
             testWS.onopen = function (event) {
@@ -81,8 +85,17 @@
             };
 
             testWS.onmessage = function (event) {
-                console.log("Hey cool, a message!", event.data);
                 var msg = JSON.parse(event.data);
+
+                if (msg.target == "caller" && !isCaller) {
+                    console.log("Ignoring message for caller");
+                    return;
+                } else if (msg.target == "answerer" && isCaller) {
+                    console.log("Ignoring message for answerer");
+                    return;
+                }
+
+                console.log("Hey cool, a message!", event.data);
 
                 switch (msg.type) {
                     case "offer":
@@ -90,24 +103,24 @@
                         callButton.disabled = true;
                         $("#login-container").hide();
 
-                        createPeerConnection();
+                        createClientPeerConnection();
+                        createServerPeerConnection();
 
-                        var desc = new RTCSessionDescription(msg);
-                        peerconnection.setRemoteDescription(desc);
+                        clientPeerconnection.setRemoteDescription(msg);
 
                         navigator.mediaDevices.getUserMedia({audio: true, video: true})
                         .then(function(localStream) {
                             document.getElementById("local-video").srcObject = localStream;
-                            localStream.getTracks().forEach(track => peerconnection.addTrack(track, localStream));
-                            return peerconnection.createAnswer();
+                            localStream.getTracks().forEach(track => clientPeerconnection.addTrack(track, localStream));
+                            return clientPeerconnection.createAnswer();
                         })
                         .then(function(answer) {
-                            return peerconnection.setLocalDescription(answer);
+                            return clientPeerconnection.setLocalDescription(answer);
                         })
                         .then(function() {
                             sendMsg("client", {
-                                "type": peerconnection.localDescription.type,
-                                "sdp": peerconnection.localDescription.sdp
+                                "type": clientPeerconnection.localDescription.type,
+                                "sdp": clientPeerconnection.localDescription.sdp
                             });
                         })
                         .catch(reportError);
@@ -115,10 +128,14 @@
                         break;
 
                     case "answer":
-                        console.log("Received an answer to my call");
-
-                        peerconnection.setRemoteDescription(msg)
-                        .catch(reportError);
+                        console.log("Received an answer from", msg.sender);
+                        if (msg.sender == "server") {
+                            serverPeerconnection.setRemoteDescription(msg)
+                            .catch(reportError);
+                        } else {
+                            clientPeerconnection.setRemoteDescription(msg)
+                            .catch(reportError);
+                        }
 
                         break;
 
@@ -126,10 +143,14 @@
                         console.log("Got a candidate");
 
                         if (msg.candidate == null) {
-                            console.log("Last candidate received");
+                            console.log("Last candidate received (and ignored)");
+                        } else if (msg.sender == "server") {
+                            var candidate = new RTCIceCandidate(msg.candidate);
+                            serverPeerconnection.addIceCandidate(candidate)
+                            .catch(reportError);
                         } else {
                             var candidate = new RTCIceCandidate(msg.candidate);
-                            peerconnection.addIceCandidate(candidate)
+                            clientPeerconnection.addIceCandidate(candidate)
                             .catch(reportError);
                         }
 
@@ -147,15 +168,16 @@
             callButton.disabled = true;
             username.disabled = true;
             isCaller = true;
-            createPeerConnection();
+            createClientPeerConnection();
+            createServerPeerConnection();
         }
 
         function reportError(event) {
             console.log("Error:", event);
         }
 
-        function createPeerConnection() {
-            peerconnection = new RTCPeerConnection({
+        function createClientPeerConnection() {
+            clientPeerconnection = new RTCPeerConnection({
                 iceServers: [
                     {
                         urls: "stun:stun.l.google.com:19302"
@@ -163,7 +185,7 @@
                 ]
             });
 
-            peerconnection.onicecandidate = function (event) {
+            clientPeerconnection.onicecandidate = function (event) {
                 console.log("onicecandidate", event);
                 if (event.candidate == null) {
                     console.log("Last candidate received");
@@ -175,33 +197,7 @@
                 }
             };
 
-            peerconnection.onicecandidateerror = function (event) {
-                console.log("onicecandidateerror", event);
-            };
-
-            peerconnection.onnegotiationneeded = function (event) {
-                console.log("onnegotiationneeded", event);
-            };
-
-            peerconnection.oniceconnectionstatechange = function (event) {
-                console.log("oniceconnectionstatechange", event);
-            };
-
-            peerconnection.onicegatheringstatechange = function (event) {
-                console.log("onicegatheringstatechange", event);
-            };
-
-            peerconnection.onsignalingstatechange = function (event) {
-                console.log("onsignalingstatechange", event);
-            };
-
-            peerconnection.ondatachannel = function (event) {
-                console.log("Hey cool a data channel: ", event);
-                datachannel = event.channel;
-                datachannel.onmessage = handleDataChannelMessage;
-            };
-
-            peerconnection.ontrack = function (event) {
+            clientPeerconnection.ontrack = function (event) {
                 console.log("Hey cool a mediastream: ", event);
                 document.getElementById("remote-video").srcObject = event.streams[0];
             }
@@ -210,15 +206,15 @@
                 navigator.mediaDevices.getUserMedia({audio: true, video: true})
                 .then(function(localStream) {
                     document.getElementById("local-video").srcObject = localStream;
-                    localStream.getTracks().forEach(track => peerconnection.addTrack(track, localStream));
+                    localStream.getTracks().forEach(track => clientPeerconnection.addTrack(track, localStream));
                     
-                    peerconnection.createOffer().then(function(offer) {
-                        return peerconnection.setLocalDescription(offer);
+                    clientPeerconnection.createOffer().then(function(offer) {
+                        return clientPeerconnection.setLocalDescription(offer);
                     })
                     .then(function() {
                         sendMsg("client", {
-                            "type": peerconnection.localDescription.type,
-                            "sdp": peerconnection.localDescription.sdp
+                            "type": clientPeerconnection.localDescription.type,
+                            "sdp": clientPeerconnection.localDescription.sdp
                         });
                     })
                     .catch(reportError);
@@ -227,6 +223,48 @@
                     console.log("Error doing media stuff: ", event);
                 });
             }
+        };
+
+        function createServerPeerConnection() {
+            console.log("Creating server peer connection");
+            serverPeerconnection = new RTCPeerConnection({
+                iceServers: [
+                    {
+                        urls: "stun:stun.l.google.com:19302"
+                    }
+                ]
+            });
+
+            serverPeerconnection.onicecandidate = function (event) {
+                console.log("server onicecandidate", event);
+                if (event.candidate == null) {
+                    console.log("Last server candidate received");
+                } else {
+                    sendMsg("server", {
+                        type: "ice-candidate",
+                        candidate: event.candidate
+                    });
+                }
+            };
+
+            navigator.mediaDevices.getUserMedia({audio: true, video: true})
+            .then(function(localStream) {
+                localStream.getTracks().forEach(track => serverPeerconnection.addTrack(track, localStream));
+                
+                serverPeerconnection.createOffer().then(function(offer) {
+                    return serverPeerconnection.setLocalDescription(offer);
+                })
+                .then(function() {
+                    sendMsg("server", {
+                        "type": serverPeerconnection.localDescription.type,
+                        "sdp": serverPeerconnection.localDescription.sdp
+                    });
+                })
+                .catch(reportError);
+            })
+            .catch(function (event) {
+                console.log("Error doing media stuff: ", event);
+            });
         };
 
     </script>
