--- a/static/client.html
+++ b/static/client.html
@@ -77,7 +77,9 @@
 
             $("#username").attr("disabled", true);
             $("#connect").attr("disabled", true);
-            testWS = new WebSocket("wss://" + window.location.host + "/echo");
+
+            var protocol = window.location.protocol == "https" ? "wss://" : "ws://";
+            testWS = new WebSocket(protocol + window.location.host + "/echo");
             testWS.onopen = function (event) {
                 console.log("Hey cool, websocket open");
                 sendMsg("client", {"type": "client_hello"});
